--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       
         </div>
         <div class="col-sm-2">
-          <a href="https://github.com/" target="_blank">Github</a>
+          <a href="https://github.com/Aronza1234" target="_blank">Github</a>
         </div>
         <div class="col-sm-2">
-          <a href="https://www.linkedin.com/" target="_blank">Linkedin</a>
+          <a href="https://www.linkedin.com/in/alex-hall-b85716168/" target="_blank">Linkedin</a>
         </div>
         <div class="col-sm-2">
-          <a href="https://tunein.com/podcasts/" target="_blank">Podcast - Later Twittter</a>
+          <a href="https://twitter.com/A_l_e_x_H_a_l_l" target="_blank">Twittter</a>
         </div>
       </div>
     </footer>
